--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3020",
+    "dev:web": "next dev -p 3020",
+    "dev:watch": "node scripts/watch-whatsapp-responses.js",
+    "dev": "concurrently -k -n WEB,WS -c green,cyan \"npm:dev:web\" \"npm:dev:watch\"",
     "build": "next build",
-    "start": "next start -p 3020",
+    "start:web": "next start -p 3020",
+    "start:watch": "node scripts/watch-whatsapp-responses.js",
+    "start": "concurrently -k -n WEB,WS -c green,cyan \"npm:start:web\" \"npm:start:watch\"",
     "lint": "next lint"
   },
   "dependencies": {
@@ -47,7 +51,9 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
+    "express": "^5.1.0",
     "geist": "^1.3.1",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
@@ -56,6 +62,7 @@
     "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.18.1",
+    "mqtt": "^5.14.1",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
@@ -83,9 +90,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.9",
+    "tsx": "^4.20.6",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
